# forismatic-rs

./: .travis.yml  Cargo.toml  README.md
example/fortumatic/: Cargo.toml
example/fortumatic/src/: main.rs
examples/: fortumatic.rs
fortune/: Cargo.toml
fortune/src/: main.rs
src/: error.rs  lib.rs
