[package]
name = "forismatic"
version = "0.1.0"
authors = ["equal-l2 <eng.equall2@gmail.com>"]
description = "Thin API wrapper for Forismatic, an online quote provider"
license = "MIT"
repository = "https://github.com/equal-l2/forismatic-rs"

[dependencies]
reqwest = "0.7"
serde = "1"
serde_json = "1"
serde_derive = "1"
