[package]
name = "forismatic"
version = "0.2.0"
authors = ["equal-l2 <eng.equall2@gmail.com>"]
description = "Thin API wrapper for Forismatic, an online quote provider"
license = "MIT"
repository = "https://github.com/equal-l2/forismatic-rs"
edition = "2018"

[dependencies]
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
