[package]
name = "forismatic"
version = "0.3.0"
authors = ["equal-l2 <eng.equall2@gmail.com>"]
description = "Thin API wrapper for Forismatic, an online quote provider"
license = "MIT"
repository = "https://github.com/equal-l2/forismatic-rs"
edition = "2018"

[dependencies]
reqwest = { version = "0.10.4", features = ["blocking"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
tokio = "0.2.19"
